# chessao

./: .gitignore  .travis.yml  FAQ.md  Pipfile  README.md  chessao_api.py  pyproject.toml  roz2.py  setup.cfg  sz_roz.py  szachao.py  szachao_testy.py  sztesty.py  testy2.py
Szachao.docs/: SZACHAO.doc  SZACHAOpopr.doc
Szachao.docs/ChessDiagram/: Chess.js
Szachao.docs/ChessDiagram03a/: switch.htm
chessao/: __init__.py  __main__.py  cards.py  chess.py  cli.py  dev.py  gameplay.py  helpers.py  history.py  pieces.py  players.py  rules.py  utils.py
dev/: ipython_dev.py
docs/: For this article.doc  Makefile  SZACHAO2.doc  conf.py  index.rst  zasady.md
graphics/: logo.ai
graphics/ChessDiagram/: ChessDiagram.htm  Imp.htm  default.HTM
graphics/ChessDiagram03a/: ChessDiagram.htm  Imp.htm
misc/: ipython_dev.py
src/: chessao_api.py  error_log.txt  roz2.py  setup.py  sz_roz.py  szachao.py  szachao_testy.py  sztesty.py  testy2.py
src/chessao/: __init__.py  api.py  cards.py  chess.py  chessao_api.py  gameplay.py  helpers.py  pieces.py  players.py  szachao.py  utils.py
src/docs/: conf.py  index.rst  zasady.md
src/tests/: chessao_doctests.py  chessao_tests.py  conftest.py  szachao_testy.py  sztesty.py  test_cards.py  test_gameplay.py  test_history.py  test_pieces.py  testy2.py  unit_test.py  unit_tests.py
tests/: conftest.py  test_cards.py  test_chess.py  test_gameplay.py  test_history.py  test_pieces.py  test_simulations.py  unit_test.py  utils.py
tests/old/: sztesty.py
tests/simulation_bugs/: 0731-21:16:49.json  0731-21:17:03.json  0731-21:17:48.json  (+83 more)
(+18 files in other folders)
