[tool.poetry]
name = "chessao"
version = "0.1.0"
description = "Chessao game engine"
authors = ["Tadek Teleżyński <tadekte@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/tadeoos/chessao"
homepage = "https://github.com/tadeoos/chessao"
keywords = ['chess', 'mao', 'game', 'chessao']

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "*"
click = "*"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
pympler = "*"
ipdb = "*"
sphinx = "*"

[tool.poetry.scripts]
chessao = 'chessao.cli:cli'
